--- a/src/App.css
+++ b/src/App.css
@@ -41,4 +41,18 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-} 
+}
+#sidebar {
+  position: absolute;
+  z-index: 100;
+  box-shadow: 0px 1px 1px grey;
+  background: #f2f2f2;
+  width: 325px;
+  max-width: 100%;
+  height: calc(100vh - 60px);
+  overflow-y: scroll;
+}
+
+#sidebar-inner {
+  padding: 10px;
+}
